# Datenraffinerie

./: .gitignore  .gitlab-ci.yml  README.md  Scan.py  analysis_utilities.py  config_utilities.py  control_adapter.py  daq.py  luigi_tests.py  pyproject.toml  requirements.txt  scan.py  setup.cfg  setup.py  test_datenraffinerie.py  timewalk_scan_with_daq_adapter.py  valve_yard.py
default_configs/: LDHexaboard.yaml  V3LDHexaboard.yaml  daq-system-config.yaml  initLDV3.yaml  roc-reg-map.yaml
docs/Manual/: Datenraffinerie Manual.tex
docs/source/: conf.py  index.rst
docs/source/architecture/: configuration.rst  daq-coordinator.rst  system_overview.rst  system_state.rst
docs/source/structs/: File-list.rst  system_state.rst
docs/source/tasks/: Calibration.rst  DataField.rst  FieldPreparation.rst  valveyard.rst  well.rst
docs/source/usage/: analysis-procedure-configuration.rst  daq-procedure-configuration.rst  installation.rst  writing-analyses.rst
examples/: analysis_procedures.yaml  daq_procedures.yaml  main_config.yaml  network_config.yml
examples/example_analysis_collection/: __init__.py  example_analysis_1.py
src/datenraffinerie/: acquire_data.py  acquire_data_with_daq_coordinator.py  analysis_utilities.py  config_cache.py  config_errors.py  config_utilities.py  config_validators.py  control_adapter.py  daq_backends.py  daq_coordination.py  daq_protocols.py  daq_transports.py  datenraffinerie.py  dict_utils.py  distillery.py  frack_data.py  full_daq.py  gen_configurations.py  postprocessing_queue.py  print_h5.py  read_rocs.py  scan.py  valve_yard.py  yaml_utils.py  zmq_i2c_client.py
test_configurations/: basic_test.yaml  calibration_procedures.yaml  init_timewalk_scan.yaml  main_config.yaml  parse_scan_config.yaml  scan_procedures.yaml
tests/: luigi_tests.py  test_datenraffinerie.py  tests.py
tests/configuration/: analysis_procedures.yaml  initLDv3_ToA_Calib.yaml  init_timewalk_scan.yaml  main_config.yaml  main_test_config.yaml  network_config.yml  scan_procedures.yaml  test_procedures.yaml
tests/configuration/default_configs/: V3LDHexaboard-poweron-default.yaml
tests/configuration/defaults/: V3LDHexaboard-poweron-default.yaml  channel_settings.yaml  daq-master-tdc-calibration.yaml  daq-system-config.yaml  initLDV3.yaml  initial_config_daq.yaml
tests/data/: run.root  run.yaml  test_run_1.raw  test_run_1.yaml  test_run_10.raw  test_run_10.yaml  test_run_100.raw  test_run_100.yaml  test_run_101.raw  test_run_101.yaml  test_run_102.raw  test_run_102.yaml  test_run_103.raw  test_run_103.yaml  test_run_104.raw  test_run_104.yaml  test_run_105.raw  test_run_105.yaml  test_run_106.raw  test_run_106.yaml  test_run_107.raw  test_run_107.yaml  test_run_108.raw  test_run_108.yaml  test_run_109.raw  test_run_109.yaml  test_run_11.raw  test_run_11.yaml  test_run_110.raw  test_run_110.yaml  test_run_111.raw  test_run_111.yaml  test_run_112.raw  test_run_112.yaml  test_run_113.raw  test_run_113.yaml  test_run_114.raw  test_run_114.yaml  test_run_115.raw  test_run_115.yaml  (+281 more)
tools/: CMakeLists.txt  add_config.cc  config-cache-test.cc  daq_system_parameters.cc  fracker.cc  hdf-utils.cc  hdf5-extended-dataset-experiments.cc  hdf5-hyperslab-experiments.cc  hgcroc_caching.cc  hgcroc_caching.h  root-tools.cc  test-hdf-utils.cc  test_roc_datastructures.cpp  turbo-pump.cc  yaml-tools.cc  yaml-tools.h  yaml_test.cpp
tools/include/: daq_system_parameters.h  exceptions.h  hdf-utils.h  hgcroc_caching.h  root-tools.h
tools/utilities/: code_struct_template.cpp  generate_config_structures_from_csv.py  generate_roc_structs.py
