[project]
name = "datenraffinerie"
version = 1.0.0
dependencies = [
	"Click",
	"pandas",
	"numpy",
	"pyyaml",
	"zmq",
	"pytest",
	"tables",
	"jinja2",
	"schema",
	"rich",
	"pymongo",
	"hgcroc-configuration-client",
	'python_version<="3.9"',
]

[build-system]
requires = [
	"setuptools>=42",
	"wheel"
]
build-backend = "setuptools.build_meta"
